--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [tool:pytest]
-addopts = --cov=esn -v
-testpaths = ./esn ./tests
+addopts = --cov=esn_dev -v
+testpaths = ./esn_dev ./tests
 log_cli = true
 log_cli_level = INFO
